# ComItem

./: .gitignore  .qmlls.ini  CMakeLists.txt  ComBadge.qml  ComItemControls.qml.metainfo  README.en.md  README.md  combutton.cpp  comitem.h  comprogressbar.cpp  qmldir  快速解决预览问题.md
.cache/clangd/index/: comitem.cpp.0FD7871EF2A24DCD.idx  comitem.h.A6344BF161EFFEED.idx  example.cpp.E2F0FAB6A82F4741.idx
.github/: copilot-instructions.md
cmake/: ComItemConfig.cmake.in  copy_headers.cmake
cpp/: ComBasicButton.cpp  ComBasicButton.h  ComThemeAttached.cpp  ComThemeAttached.h  combutton.cpp  combutton.h  comitem.cpp  comitem.h  comitem_global.h  comprogressbar.cpp  comprogressbar.h
designer/: comitem.metainfo
docs/: ComTheme_AttachedProperties使用说明.md  QQuickAttachedPropertyPropagator详解.md  开发记录.md  风格方案对比与迁移指南.md
example/: CMakeLists.txt  Main.qml  README.md  StyleComparisonTest.qml  example.cpp  example.qml  main.cpp
qml/: BasicButton.qml  ComAvatar.qml  ComButton.qml  ComButton2_AttachedStyle.qml  ComButton3_InlineStyle.qml  ComButton4_InstanceStyle.qml  ComCanvas.qml  ComCard.qml  ComCheckBox.qml  ComComboBox.qml  ComLabel.qml  ComLineTextField.qml  ComQmlProgressBar.qml  ComSwitch.qml  ComTextField.qml  ComTheme.qml  ComThemeInstance.qml
